--- a/cb_banter/package.json
+++ b/cb_banter/package.json
@@ -8,6 +8,8 @@
   "author": "Patrick Howard",
   "license": "MIT",
   "dependencies": {
+    "node-fetch": "1.6.3",
+    "greeting": "1.0.6"
 
   }
 }
