--- a/cb_echo/package.json
+++ b/cb_echo/package.json
@@ -7,6 +7,7 @@
   },
   "author": "Patrick Howard",
   "license": "MIT",
-  "dependencies": {    
+  "dependencies": {
+    "socket.io-redis": "*"
   }
 }
