--- a/cb_echo/package.json
+++ b/cb_echo/package.json
@@ -8,6 +8,8 @@
   "author": "Patrick Howard",
   "license": "MIT",
   "dependencies": {
-    "greeting": "1.0.6"
+    "greeting": "1.0.6",
+    "serialijse": "0.1.3"
+
   }
 }
