--- a/sm_banter/serverless.yml
+++ b/sm_banter/serverless.yml
@@ -5,13 +5,14 @@ service: sm
 
 provider:
   name: openwhisk
+  runtime: nodejs:8
   memorySize: 256 # optional, default is 256
   timeout: 5 # optional, default is 60
 
 functions:
     banter:
-      handler: banter.handler
-      name: sm_banter
+      handler: test.handler
+      name: sm_test
 
 # run npm install to download the provider plugin
 plugins:
