--- a/sm_banter/constructor/package.json
+++ b/sm_banter/constructor/package.json
@@ -27,8 +27,8 @@
     "conversational economy"
   ],
   "dependencies": {
-    "mongoose": "5.0.0-rc0",
-    "uuid": "3.0.1"
+    "dayjs": "^1.5.0",
+    "valid-url": "1.0.9"
   },
   "devDependencies": {}
 }
