--- a/sm_banterBK/serverless.yml
+++ b/sm_banterBK/serverless.yml
@@ -5,14 +5,13 @@ service: sm
 
 provider:
   name: openwhisk
-  runtime: nodejs:8
   memorySize: 256 # optional, default is 256
   timeout: 5 # optional, default is 60
 
 functions:
     banter:
-      handler: test.handler
-      name: sm_test
+      handler: banter.handler
+      name: sm_banter
 
 # run npm install to download the provider plugin
 plugins:
