--- a/sm_banter/package.json
+++ b/sm_banter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "banter",
   "version": "0.1.0",
   "description": "Strategic Machines - test agent",
   "scripts": {
