--- a/sm_banter/serverless.yml
+++ b/sm_banter/serverless.yml
@@ -11,8 +11,8 @@ provider:
 
 functions:
     banter:
-      handler: test.handler
-      name: sm_test
+      handler: banter.handler
+      name: sm_banter
 
 # run npm install to download the provider plugin
 plugins:
