--- a/sm_banter/constructor/package.json
+++ b/sm_banter/constructor/package.json
@@ -28,6 +28,7 @@
   ],
   "dependencies": {
     "chalk": "1.1.3",
+    "clone-deep": "1.0.0",
     "dayjs": "^1.5.18",
     "mongoose": "^5.0.0",
     "request": "2.83.0",
