--- a/sm_close/package.json
+++ b/sm_close/package.json
@@ -9,6 +9,6 @@
   "license": "MIT",
   "dependencies": {
     "greeting": "1.0.6",
-    "serialijse": "0.1.3"
+    "@xmachina/message": "^1.0.1"
   }
 }
