--- a/sm_liverep/package.json
+++ b/sm_liverep/package.json
@@ -8,7 +8,7 @@
   "author": "Patrick Howard",
   "license": "MIT",
   "dependencies": {
-    "greeting": "1.0.6",
-    "@xmachina/message": "^1.0.1"
+    "@xmachina/message": "^1.0.5",
+    "greeting": "1.0.6"
   }
 }
